--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html><head>
 <title>NEOMATRIX</title>
 <meta charset="utf-8">
+<div itemscope itemtype="http://schema.org/Person">
+<div itemprop="name"><strong>Acevedo Maldonado Josue (NEOMATRIX)</strong></div>
+<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+<div><span itemprop="addressLocality">oaxaca</span>, <span itemprop="addressRegion">Oaxaca</span></div><div itemprop="postalCode">68274</div>
+<div itemprop="addressCountry">Mexico</div>
+</div>
+<div itemprop="email">josuecevedo@gmail.com</div>
+<div itemprop="telephone">9511492998</div>
+</div>
 
      
 <style type="text/css">
@@ -12,9 +21,7 @@ body {
 	margin-top: 50px;
 	margin-bottom: 50px;
 }
-.vs {
-	font-size: 1cm;
-}
+
 tituloevento {
 	font-size: 1em;
 }
