--- a/mas.html
+++ b/mas.html
@@ -290,7 +290,7 @@
             <div class="nav-collapse collapse">
               <ul class="nav">
                 <li class="active"><a href="index.html" class="navbar-form">Home</a></li>
-                <li><a href="#contact">Pizarra</a></li>
+                <li><a href="pizarra.html">Pizarra</a></li>
                
                 <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
                 <li class="dropdown">
@@ -301,7 +301,7 @@
                     <li><a href="#">Contacto</a></li>
                     <li class="divider"></li>
                     <li class="nav-header">Alumnos</li>
-                    <li><a href="#">Calificaciones</a></li>
+                    <li><a href="calificaciones.html">Calificaciones</a></li>
                     <li><a href="#">Pizarron</a></li>
                   </ul>
                
