--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
               <ul class="nav">
-                <li><a href="#contact">Pizarra</a></li>
+                <li><a href="pizarra.html">Pizarra</a></li>
                 <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mas <b class="caret"></b></a>
@@ -287,7 +287,7 @@
                     <li><a href="mas.html">Contacto</a></li>
                     <li class="divider"></li>
                     <li class="nav-header">Alumnos</li>
-                    <li><a href="#">Calificaciones</a></li>
+                    <li><a href="calificaciones.html">Calificaciones</a></li>
                     <li><a href="#">Pizarron</a></li>
                   </ul>
                 </li><!--
