--- a/indexblog.html
+++ b/indexblog.html
@@ -45,6 +45,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
   </div>
 </nav>
 
+<github-card user="codeneomatrix"></github-card>
+
 <div class="callout callout-top clearfix">
 
 	<div class="grid">
